--- a/src/styles.sass
+++ b/src/styles.sass
@@ -56,7 +56,7 @@ img[ehimg]
     border: red solid
 
 code
-  background: rgba(100, 100, 100, .2)
+  background: rgba(128, 128, 64, 0.1)
   border-radius: 4px
   font-family: Consolas, Courier New, Courier, monospace
   font-size: calc(100% - 2px)
@@ -68,7 +68,7 @@ code
   @media (max-width: 720px)
     margin: 0 4px 4px
 .md-container p
-  line-height: 1.5em
+  line-height: 1.25em
   margin: .5em 0
 td .md-container p
   margin: 4px 0
