--- a/src/styles.sass
+++ b/src/styles.sass
@@ -71,4 +71,8 @@ code
   line-height: 1.25em
   margin: .5em 0
 td .md-container p
-  margin: 4px 0
+  &:first-child
+    margin-top: 0
+  &:last-child
+    margin-bottom: 0
+  margin: 6px 0
