--- a/src/app/app.component.sass
+++ b/src/app/app.component.sass
@@ -1,4 +1,8 @@
 mat-toolbar
+  padding: 0
   user-select: none
-#title
-  color: inherit
+  #home-button
+    overflow: hidden
+  #user-button, #back-button, #home-button
+    height: 100%
+    margin: 0
