--- a/src/app/editor/editor.component.html
+++ b/src/app/editor/editor.component.html
@@ -4,38 +4,19 @@
       <span class="mat-headline">
         {{ (create | async) ? '创建标签' : '修改标签' }}
       </span>
-      <a mat-icon-button href="https://github.com/EhTagTranslation/Database/wiki/参与翻译" matTooltip="查看参与翻译指南"
+      <a mat-icon-button matTooltip="查看参与翻译指南" href="https://github.com/EhTagTranslation/Database/wiki/参与翻译"
         target="_blank">
         <mat-icon>help</mat-icon>
       </a>
-      <a *ngIf="!(create | async)" mat-icon-button [routerLink]="['/edit', forms.namespace | async,'*new']" [queryParams]="{
-        raw: value('raw'),
-        name: value('name'),
-        intro: value('intro'),
-        links: value('links')
-      }" matTooltip="以此为模板新建标签">
+      <a *ngIf="!(create | async)" mat-icon-button matTooltip="以此为模板新建标签"
+        [routerLink]="['/edit', forms.namespace | async,'*new']" [queryParams]="{
+          raw: value('raw'),
+          name: value('name'),
+          intro: value('intro'),
+          links: value('links')
+        }">
         <mat-icon>content_copy</mat-icon>
       </a>
-      <span style="flex: 1 1 auto;"></span>
-      <button class="narrow" mat-raised-button (click)="narrowPreviewing 
-        ? (narrowPreviewing = false)
-        : (preview() && (narrowPreviewing = true))">
-        {{ narrowPreviewing ? '编辑' : '预览' }}
-      </button>
-      <button class="wide" mat-raised-button (click)="preview() && (narrowPreviewing = false)">
-        <ng-container *ngIf="!(rendered.loading | async); else renderingspinner">预览</ng-container>
-        <ng-template #renderingspinner>
-          <mat-spinner class="loading" [diameter]="24"></mat-spinner>
-        </ng-template>
-      </button>
-      <button mat-raised-button [disabled]="(tagForm.invalid) || !(github.tokenChange | async)"
-        [matTooltip]="!(github.tokenChange | async) ? '请先登录' : tagForm.invalid ? '请检查填写的内容' : '' " (click)="submit()"
-        (focus)="preSubmit()" (mouseenter)="preSubmit()" color="accent">
-        <ng-container *ngIf="!(submitting | async); else submittingspinner">提交</ng-container>
-        <ng-template #submittingspinner>
-          <mat-spinner class="loading" [diameter]="24"></mat-spinner>
-        </ng-template>
-      </button>
     </header>
     <section [@slide]="narrowPreviewing ? 'right' : 'left'">
       <div id="form-container">
@@ -165,5 +146,30 @@
         </mat-card>
       </div>
     </section>
+    <footer>
+      <span style="flex: 1 1 auto;"></span>
+      <button mat-raised-button (click)="reset()">
+        重置
+      </button>
+      <button class="narrow" mat-raised-button (click)="narrowPreviewing 
+            ? (narrowPreviewing = false)
+            : (preview() && (narrowPreviewing = true))">
+        {{ narrowPreviewing ? '编辑' : '预览' }}
+      </button>
+      <button class="wide" mat-raised-button (click)="preview() && (narrowPreviewing = false)">
+        <ng-container *ngIf="!(rendered.loading | async); else renderingspinner">预览</ng-container>
+        <ng-template #renderingspinner>
+          <mat-spinner class="loading" [diameter]="24"></mat-spinner>
+        </ng-template>
+      </button>
+      <button mat-raised-button [disabled]="(tagForm.invalid) || !(github.tokenChange | async)"
+        [matTooltip]="!(github.tokenChange | async) ? '请先登录' : tagForm.invalid ? '请检查填写的内容' : '' " (click)="submit()"
+        (focus)="preSubmit()" (mouseenter)="preSubmit()" color="accent">
+        <ng-container *ngIf="!(submitting | async); else submittingspinner">提交</ng-container>
+        <ng-template #submittingspinner>
+          <mat-spinner class="loading" [diameter]="24"></mat-spinner>
+        </ng-template>
+      </button>
+    </footer>
   </div>
 </div>
