--- a/src/app/editor/editor.component.sass
+++ b/src/app/editor/editor.component.sass
@@ -1,17 +1,26 @@
 
 #root
+  position: relative
   overflow-x: hidden
-  padding: 6px
-  header
+  header, footer
     display: flex
     user-select: none
+    display: flex
+    user-select: none
+  header
     margin: 18px 12px 0
     > *
       margin: auto 6px
+  footer
+    margin: 0 10px 18px
+    > *
+      margin: auto 8px
   section
     position: relative
-    display: flex
-    #form-container
+    > *
+      display: inline-block
+      vertical-align: top
+    > #form-container
       form
         user-select: none
         mat-form-field
@@ -21,7 +30,7 @@
           display: block
           margin: 18px
 
-    #preview-container
+    > #preview-container
       mat-card
         margin: 18px
         mat-card-subtitle
@@ -62,6 +71,12 @@ button, mat-card-subtitle
   display: none !important
 
 @media not all and (max-width: 720px)
+  #root
+    padding: 6px
+  footer
+    position: absolute
+    top: 18px + 6px
+    right: 6px
   .narrow
     display: none
   section
@@ -72,9 +87,11 @@ button, mat-card-subtitle
     width: 55%
 
 @media (max-width: 720px)
+  #root
+    padding: 0
   .wide
     display: none
   section
     width: 200%
   #form-container, #preview-container
-    width: 100%
+    width: 50%
