--- a/src/app/app.component.sass
+++ b/src/app/app.component.sass
@@ -1,6 +1,8 @@
 mat-toolbar
   padding: 0
   user-select: none
+  position: relative
+  z-index: 10000
   #home-button
     overflow: hidden
   #user-button, #back-button, #home-button
