--- a/src/app/editor/editor.component.sass
+++ b/src/app/editor/editor.component.sass
@@ -3,15 +3,13 @@
   position: relative
   overflow-x: hidden
   header, footer
-    display: flex
-    user-select: none
-    display: flex
     user-select: none
   header
     margin: 18px 12px 0
     > *
       margin: auto 6px
   footer
+    float: right
     margin: 0 10px 18px
     > *
       margin: auto 8px
