--- a/src/styles.sass
+++ b/src/styles.sass
@@ -35,7 +35,8 @@ $candy-app-theme: mat-light-theme($candy-app-primary, $candy-app-accent, $candy-
 
 html
   font-family: #{$font-family}
-
+  min-width: 320px
+  overflow: hidden
 body
   margin: 0
 
@@ -65,7 +66,11 @@ code
 .page-box
   @extend .mat-elevation-z8
   margin: 32px 24px 12px
+  display: flex
+  flex-direction: column
+  height: calc(100vh - 64px - 32px - 12px)
   @media (max-width: 720px)
+    height: calc(100vh - 64px)
     margin: 0 4px 4px
 .md-container p
   line-height: 1.25em
