--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,5 +7,6 @@
   <app-user id="user-button"></app-user>
   <app-github-corner href="https://github.com/EhTagTranslation/Editor" target="_blank"></app-github-corner>
 </mat-toolbar>
-
-<router-outlet></router-outlet>
+<article>
+  <router-outlet></router-outlet>
+</article>
