--- a/src/styles.sass
+++ b/src/styles.sass
@@ -67,10 +67,9 @@ code
   @extend .mat-elevation-z8
   margin: 32px 24px 12px
   display: flex
+  flex: auto
   flex-direction: column
-  height: calc(100vh - 64px - 32px - 12px)
   @media (max-width: 720px)
-    height: calc(100vh - 64px)
     margin: 0 4px 4px
 .md-container p
   line-height: 1.25em
