--- a/src/app/editor/editor.component.sass
+++ b/src/app/editor/editor.component.sass
@@ -1,20 +1,27 @@
-
-#root
-  position: relative
-  overflow-x: hidden
+\:host
+  display: flex
+  height: 100%
+  .page-box
+    position: relative
+    overflow-x: hidden
   header, footer
     user-select: none
   header
     margin: 18px 12px 0
     > *
+      vertical-align: middle
       margin: auto 6px
   footer
-    float: right
+    align-self: end
     margin: 0 10px 18px
     > *
       margin: auto 8px
   section
+    flex: auto
+    height: 0
+    display: flex
     position: relative
+    align-items: stretch
     > *
       display: inline-block
       vertical-align: top
@@ -73,12 +80,13 @@ button, mat-card-subtitle
     padding: 6px
   footer
     position: absolute
-    top: 18px + 6px
-    right: 6px
+    top: 18px
+    right: 0
   .narrow
     display: none
   section
     transform: translateX(0) !important
+    overflow: auto
   #form-container
     width: 45%
   #preview-container
@@ -91,5 +99,7 @@ button, mat-card-subtitle
     display: none
   section
     width: 200%
+    > *
+      overflow: auto
   #form-container, #preview-container
     width: 50%
