--- a/src/app/list/list.component.html
+++ b/src/app/list/list.component.html
@@ -32,68 +32,70 @@
       (page)="navigateParam({ pageIndex: $event.pageIndex, pageSize: $event.pageSize })">
     </mat-paginator>
   </header>
-  <section id="table-wrapper">
-    <table [style.display]="(loading | async) ? 'hidden' : ''" mat-table [dataSource]="pagedTags" aria-label="Elements"
-      matSort [matSortActive]="sortBy | async" [matSortDirection]="sortDirection | async"
-      (matSortChange)="navigateParam({ sortBy: $event.active, sortDirection: $event.direction })">
+  <section>
+    <div id="table-wrapper">
+      <table [style.display]="(loading | async) ? 'hidden' : ''" mat-table [dataSource]="pagedTags"
+        aria-label="Elements" matSort [matSortActive]="sortBy | async" [matSortDirection]="sortDirection | async"
+        (matSortChange)="navigateParam({ sortBy: $event.active, sortDirection: $event.direction })">
 
-      <ng-container matColumnDef="namespace">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header class="text">命名空间</th>
-        <td mat-cell *matCellDef="let row">
-          <div><a (click)="setNs(row.namespace)" [routerLink]="[ '/list', row.namespace ]">{{row.namespace}}</a></div>
-        </td>
-      </ng-container>
+        <ng-container matColumnDef="namespace">
+          <th mat-header-cell *matHeaderCellDef mat-sort-header class="text">命名空间</th>
+          <td mat-cell *matCellDef="let row">
+            <div><a (click)="setNs(row.namespace)" [routerLink]="[ '/list', row.namespace ]">{{row.namespace}}</a></div>
+          </td>
+        </ng-container>
 
-      <ng-container matColumnDef="raw">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header class="text">原始标签</th>
-        <td mat-cell *matCellDef="let row">
-          <div><a *ngIf="row.namespace === 'rows'; else notRow;" (click)="setNs(row.raw)"
-              [routerLink]="[ '/list', row.raw ]" [innerHTML]="row.raw | mark: (search | async)"></a>
-            <ng-template #notRow><span [innerHTML]="row.raw | mark: (search | async)"></span></ng-template>
-          </div>
-        </td>
-      </ng-container>
+        <ng-container matColumnDef="raw">
+          <th mat-header-cell *matHeaderCellDef mat-sort-header class="text">原始标签</th>
+          <td mat-cell *matCellDef="let row">
+            <div><a *ngIf="row.namespace === 'rows'; else notRow;" (click)="setNs(row.raw)"
+                [routerLink]="[ '/list', row.raw ]" [innerHTML]="row.raw | mark: (search | async)"></a>
+              <ng-template #notRow><span [innerHTML]="row.raw | mark: (search | async)"></span></ng-template>
+            </div>
+          </td>
+        </ng-container>
 
-      <ng-container matColumnDef="name">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header class="text">名称</th>
-        <td mat-cell *matCellDef="let row">
-          <div class="md-container" [innerHTML]="row.renderedName | mark: (search | async): true"></div>
-        </td>
-      </ng-container>
+        <ng-container matColumnDef="name">
+          <th mat-header-cell *matHeaderCellDef mat-sort-header class="text">名称</th>
+          <td mat-cell *matCellDef="let row">
+            <div class="md-container" [innerHTML]="row.renderedName | mark: (search | async): true"></div>
+          </td>
+        </ng-container>
 
-      <ng-container matColumnDef="intro">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header class="text">描述</th>
-        <td mat-cell *matCellDef="let row">
-          <div class="md-container" [innerHTML]="row.renderedIntro | mark: (search | async): true"></div>
-        </td>
-      </ng-container>
+        <ng-container matColumnDef="intro">
+          <th mat-header-cell *matHeaderCellDef mat-sort-header class="text">描述</th>
+          <td mat-cell *matCellDef="let row">
+            <div class="md-container" [innerHTML]="row.renderedIntro | mark: (search | async): true"></div>
+          </td>
+        </ng-container>
 
-      <ng-container matColumnDef="links">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header class="text">外部链接</th>
-        <td mat-cell *matCellDef="let row">
-          <div class="md-container" [innerHTML]="row.renderedLinks | mark: (search | async): true"></div>
-        </td>
-      </ng-container>
+        <ng-container matColumnDef="links">
+          <th mat-header-cell *matHeaderCellDef mat-sort-header class="text">外部链接</th>
+          <td mat-cell *matCellDef="let row">
+            <div class="md-container" [innerHTML]="row.renderedLinks | mark: (search | async): true"></div>
+          </td>
+        </ng-container>
 
-      <ng-container matColumnDef="handle" sticky>
-        <th mat-header-cell *matHeaderCellDef style="width:40px;">
-          <button matTooltip="新增" matTooltipPosition="right" matTooltipShowDelay="500" mat-icon-button
-            class="mat-accent" [routerLink]="[ '/edit', ((namespace | async) || 'aritst'), '*new' ]">
-            <mat-icon>add_circle</mat-icon>
-          </button></th>
-        <td mat-cell *matCellDef="let row">
-          <button [disabled]="editableNs.indexOf(row.namespace) < 0"
-            [matTooltip]="(editableNs.indexOf(row.namespace) < 0) ? '该命名空间的标签暂不支持从此处修改，请提交 ISSUE 讨论或通过 PR 修改' : '编辑'"
-            matTooltipPosition="right" matTooltipShowDelay="500" mat-icon-button class="mat-accent"
-            [routerLink]="[ '/edit', row.namespace, row.raw ]">
-            <mat-icon>edit</mat-icon>
-          </button>
-        </td>
-      </ng-container>
+        <ng-container matColumnDef="handle" sticky>
+          <th mat-header-cell *matHeaderCellDef style="width:40px;">
+            <button matTooltip="新增" matTooltipPosition="right" matTooltipShowDelay="500" mat-icon-button
+              class="mat-accent" [routerLink]="[ '/edit', ((namespace | async) || 'aritst'), '*new' ]">
+              <mat-icon>add_circle</mat-icon>
+            </button></th>
+          <td mat-cell *matCellDef="let row">
+            <button [disabled]="editableNs.indexOf(row.namespace) < 0"
+              [matTooltip]="(editableNs.indexOf(row.namespace) < 0) ? '该命名空间的标签暂不支持从此处修改，请提交 ISSUE 讨论或通过 PR 修改' : '编辑'"
+              matTooltipPosition="right" matTooltipShowDelay="500" mat-icon-button class="mat-accent"
+              [routerLink]="[ '/edit', row.namespace, row.raw ]">
+              <mat-icon>edit</mat-icon>
+            </button>
+          </td>
+        </ng-container>
 
-      <tr mat-header-row *matHeaderRowDef="displayedColumns | async; sticky: true"></tr>
-      <tr mat-row *matRowDef="let row; columns: (displayedColumns | async);"></tr>
-    </table>
+        <tr mat-header-row *matHeaderRowDef="displayedColumns | async; sticky: true"></tr>
+        <tr mat-row *matRowDef="let row; columns: (displayedColumns | async);"></tr>
+      </table>
+    </div>
     <div class="spinner" *ngIf="loading | async">
       <mat-spinner></mat-spinner>
     </div>
