--- a/src/app/list/list.component.sass
+++ b/src/app/list/list.component.sass
@@ -1,3 +1,6 @@
+\:host
+  display: flex
+  height: 100%
 
 header
   user-select: none
@@ -15,20 +18,28 @@ header
       width: 20px
       text-align: right
 
-section#table-wrapper
-  overflow-x: auto
+section
+  flex: auto
+  position: relative
   user-select: none
-  table
-    width: 100%
-    min-width: 640px
-    th.text
-      min-width: 80px
-    .mat-header-cell:not(:last-child), .mat-cell:not(:last-child)
-      padding-right: 8px
-    tr
-      user-select: text
-    td > div
-      margin: 4px 0
+  #table-wrapper
+    position: absolute
+    overflow: auto
+    left: 0
+    right: 0
+    top: 0
+    bottom: 0
+    table
+      width: 100%
+      min-width: 640px
+      th.text
+        min-width: 80px
+      .mat-header-cell:not(:last-child), .mat-cell:not(:last-child)
+        padding-right: 8px
+      tr
+        user-select: text
+      td > div
+        margin: 4px 0
 
   div.spinner
     padding: 120px
