--- a/src/app/editor/editor.component.html
+++ b/src/app/editor/editor.component.html
@@ -160,9 +160,11 @@
         <mat-spinner class="loading" [diameter]="24"></mat-spinner>
       </ng-template>
     </button>
-    <button mat-raised-button [disabled]="(tagForm.invalid) || !(github.tokenChange | async)"
-      [matTooltip]="!(github.tokenChange | async) ? '请先登录' : tagForm.invalid ? '请检查填写的内容' : '' " (click)="submit()"
-      (focus)="preSubmit()" (mouseenter)="preSubmit()" color="accent">
+    <button mat-raised-button [disabled]="(tagForm.invalid) || (tagForm.pristine) || !(github.tokenChange | async)" [matTooltip]="
+        !(github.tokenChange | async) ? '请先登录' 
+        : tagForm.invalid ? '请检查填写的内容'  
+        : tagForm.pristine ? '没有更改'
+        : '' " (click)="submit()" (focus)="preSubmit()" (mouseenter)="preSubmit()" color="accent">
       <ng-container *ngIf="!(submitting | async); else submittingspinner">提交</ng-container>
       <ng-template #submittingspinner>
         <mat-spinner class="loading" [diameter]="24"></mat-spinner>
