--- a/src/app/editor/editor.component.sass
+++ b/src/app/editor/editor.component.sass
@@ -59,6 +59,7 @@ button, mat-card-subtitle
   &.mat-option
     line-height: 1.5em !important
   .ns-text
+    font-weight: 500
   .ns-raw
     &::before
       content: ' ('
