--- a/src/app/editor/editor.component.html
+++ b/src/app/editor/editor.component.html
@@ -64,7 +64,7 @@
             </mat-menu>
           </button>
           <mat-label>原始标签</mat-label>
-          <input matInput formControlName="raw" required />
+          <input matInput placeholder="ruri gokou" formControlName="raw" required />
           <mat-hint>{{ enabled('raw') ? '输入原始的标签内容' : '修改标签时无法更改此项' }}</mat-hint>
           <mat-error *ngIf="hasError('raw', 'required')">必须填写</mat-error>
           <mat-error *ngIf="hasError('raw', 'minlength', 'required')">至少包含两个字母
@@ -90,25 +90,26 @@
             </mat-menu>
           </button>
           <mat-label>名称</mat-label>
-          <input matInput formControlName="name" required>
+          <input matInput placeholder="五更琉璃（黑猫）" formControlName="name" required>
           <mat-hint>输入标签的中文翻译</mat-hint>
           <mat-error *ngIf="hasError('name', [ 'pattern', 'required' ])">必须填写</mat-error>
         </mat-form-field>
         <mat-form-field class="markdown">
           <mat-label>描述</mat-label>
-          <textarea matInput formControlName="intro" cdkTextareaAutosize cdkAutosizeMinRows="2" cdkAutosizeMaxRows="10"></textarea>
+          <textarea matInput placeholder="![黑猫](http://tiny.cc/i8hzaz)
+网名黑猫。SNS社群“宅女集合”的成员之一。" formControlName="intro" cdkTextareaAutosize cdkAutosizeMinRows="2" cdkAutosizeMaxRows="10"></textarea>
           <mat-hint>输入标签的描述</mat-hint>
         </mat-form-field>
         <mat-form-field class="markdown">
           <mat-label>外部链接</mat-label>
-          <textarea matInput formControlName="links" cdkTextareaAutosize cdkAutosizeMinRows="2" cdkAutosizeMaxRows="10"></textarea>
+          <textarea matInput placeholder="[萌娘百科](https://zh.moegirl.org/五更琉璃) [Fandom](https://oreimo.fandom.com/zh/五更琉璃)" formControlName="links" cdkTextareaAutosize cdkAutosizeMinRows="2" cdkAutosizeMaxRows="10"></textarea>
           <mat-hint>输入标签的相关链接，如指向{{
-                (((inputs.namespace | async ) || (original.namespace | async)) === 'artist') ? '画师的微博和 pixiv ' 
+                (((inputs.namespace | async ) || (original.namespace | async)) === 'artist') ? '画师的微博、pixiv、Twitter或个人主页' 
               : (((inputs.namespace | async ) || (original.namespace | async)) === 'group') ? '社团或公司的官方网站'
               : (((inputs.namespace | async ) || (original.namespace | async)) === 'parody') ? '作品的维基或萌百页面'
               : (((inputs.namespace | async ) || (original.namespace | async)) === 'character') ? '角色的百科页面'
-              : ' EhWiki 页面'
-            }}的链接</mat-hint>
+              : ' EhWiki 页面或萌百词条'
+            }}的链接”</mat-hint>
         </mat-form-field>
       </form>
     </div>
