--- a/src/app/editor/editor.component.html
+++ b/src/app/editor/editor.component.html
@@ -104,12 +104,12 @@
           <mat-label>外部链接</mat-label>
           <textarea matInput placeholder="[萌娘百科](https://zh.moegirl.org/五更琉璃) [Fandom](https://oreimo.fandom.com/zh/五更琉璃)" formControlName="links" cdkTextareaAutosize cdkAutosizeMinRows="2" cdkAutosizeMaxRows="10"></textarea>
           <mat-hint>输入标签的相关链接，如指向{{
-                (((inputs.namespace | async ) || (original.namespace | async)) === 'artist') ? '画师的微博、pixiv、Twitter或个人主页' 
+                (((inputs.namespace | async ) || (original.namespace | async)) === 'artist') ? '画师的微博、pixiv、Twitter 或个人主页' 
               : (((inputs.namespace | async ) || (original.namespace | async)) === 'group') ? '社团或公司的官方网站'
               : (((inputs.namespace | async ) || (original.namespace | async)) === 'parody') ? '作品的维基或萌百页面'
               : (((inputs.namespace | async ) || (original.namespace | async)) === 'character') ? '角色的百科页面'
               : ' EhWiki 页面或萌百词条'
-            }}的链接”</mat-hint>
+            }}的链接</mat-hint>
         </mat-form-field>
       </form>
     </div>
