--- a/src/app/list/list.component.html
+++ b/src/app/list/list.component.html
@@ -84,7 +84,7 @@
               <mat-icon>add_circle</mat-icon>
             </button></th>
           <td mat-cell *matCellDef="let row">
-            <button [disabled]="editableNs.indexOf(row.namespace) < 0"
+            <button
               [matTooltip]="(editableNs.indexOf(row.namespace) < 0) ? '该命名空间的标签暂不支持从此处修改，请提交 ISSUE 讨论或通过 PR 修改' : '编辑'"
               matTooltipPosition="right" matTooltipShowDelay="500" mat-icon-button class="mat-accent"
               [routerLink]="[ '/edit', row.namespace, row.raw ]">
