--- a/src/app/editor/editor.component.sass
+++ b/src/app/editor/editor.component.sass
@@ -5,7 +5,8 @@
     position: relative
     overflow-x: hidden
   header, footer
-    user-select: none
+    > *
+      user-select: none
   header
     margin: 18px 12px 0
     > *
@@ -27,18 +28,18 @@
       vertical-align: top
     > #form-container
       form
-        user-select: none
-        > *
+        mat-form-field
+          user-select: none
           &.markdown mat-label::after
             font-family: 'iconfont'
             content: ' \00e6d1'
-          display: block
+        > *
           margin: 18px
+          display: block
         > mat-hint 
           font-size: 12px
           > p
             margin: 10px 0 10px 8px
-            user-select: text
 
 
     > #preview-container
@@ -78,9 +79,6 @@ button, mat-card-subtitle
     overflow: hidden
     text-overflow: ellipsis
 
-
-.hide
-  display: none !important
 
 @media not all and (max-width: 720px)
   #root
