--- a/src/styles.sass
+++ b/src/styles.sass
@@ -82,3 +82,9 @@ td .md-container p
   &:last-child
     margin-bottom: 0
   margin: 6px 0
+
+.no-user-select
+  user-select: none
+
+.hide
+  display: none !important
