--- a/src/browser/styles.sass
+++ b/src/browser/styles.sass
@@ -100,3 +100,10 @@ td .md-container p
 
 .hide
   display: none !important
+
+.lazyload 
+	opacity: 0
+
+.lazyloading 
+	opacity: 1
+	transition: opacity 300ms
