--- a/src/browser/app/github-corner/github-corner.component.sass
+++ b/src/browser/app/github-corner/github-corner.component.sass
@@ -1,4 +1,4 @@
-\:host
+:host
   width: 48px
 $size: 80px
 svg
@@ -20,7 +20,7 @@ svg
 @media (max-width: 599px)
   #octo-arm
     animation-play-state: running
-  \:host
+  :host
     width: 40px
   $size: 64px
   svg
