--- a/src/browser/app/editor/editor.component.html
+++ b/src/browser/app/editor/editor.component.html
@@ -242,9 +242,7 @@
         <button class="narrow" mat-raised-button (click)="narrowPreviewing = !narrowPreviewing">
             {{ narrowPreviewing ? '编辑' : '预览' }}
         </button>
-        <button
-            mat-raised-button
-            [disabled]="tagForm.invalid || !(isEditableNs | async) || tagForm.pristine || !(github.tokenChange | async)"
+        <span
             [matTooltip]="
                 !(github.tokenChange | async)
                     ? '请先登录'
@@ -254,15 +252,35 @@
                     ? '没有更改'
                     : ''
             "
-            (click)="submit()"
-            (focus)="preSubmit()"
-            (mouseenter)="preSubmit()"
-            color="accent"
         >
-            <ng-container *ngIf="!(submitting | async); else submittingspinner">提交</ng-container>
-            <ng-template #submittingspinner>
-                <mat-spinner class="loading" [diameter]="24"></mat-spinner>
-            </ng-template>
-        </button>
+            <button
+                mat-raised-button
+                color="accent"
+                [disabled]="
+                    tagForm.invalid || !(isEditableNs | async) || tagForm.pristine || !(github.tokenChange | async)
+                "
+                (click)="submit()"
+                (focus)="preSubmit()"
+                (mouseenter)="preSubmit()"
+            >
+                <ng-container *ngIf="!(submitting | async); else submittingspinner">提交</ng-container>
+                <ng-template #submittingspinner>
+                    <mat-spinner class="loading" [diameter]="24"></mat-spinner>
+                </ng-template>
+            </button>
+            <button
+                mat-raised-button
+                color="accent"
+                class="icon-button"
+                [disabled]="
+                    tagForm.invalid || !(isEditableNs | async) || tagForm.pristine || !(github.tokenChange | async)
+                "
+                (click)="submit()"
+                (focus)="preSubmit()"
+                (mouseenter)="preSubmit()"
+            >
+                <mat-icon>more_vert</mat-icon>
+            </button></span
+        >
     </footer>
 </div>
