--- a/src/browser/app/editor/editor.component.sass
+++ b/src/browser/app/editor/editor.component.sass
@@ -7,6 +7,13 @@
   header, footer
     > *
       user-select: none
+    button.icon-button
+      min-width: 24px
+      padding: 0 6px
+      mat-icon
+        width: 16px
+        height: 16px
+        font-size: 16px
   header
     margin: 18px 12px 0
     > *
