--- a/src/browser/app/editor/editor.component.sass
+++ b/src/browser/app/editor/editor.component.sass
@@ -41,7 +41,6 @@
           > p
             margin: 10px 0 10px 8px
 
-
     > #preview-container
       mat-card
         margin: 18px
@@ -78,7 +77,11 @@ button, mat-card-subtitle
     color: rgba(0, 0, 0, 0.54)
     overflow: hidden
     text-overflow: ellipsis
-
+mat-option
+  .hint-slaved
+    text-decoration: line-through
+  .hint-namespace
+    color: gray
 
 @media not all and (max-width: 720px)
   #root
